# kaggle-child-mind-institute-detect-sleep-states

./: .gitignore  LICENSE  README.md  pyproject.toml
notebook/: eda001.ipynb
run/: inference.py  prepare_data.py  prepare_dev.py  train.py
run/conf/: inference.yaml  prepare_data.yaml  train.yaml
run/conf/dataset/: centernet.yaml  detr.yaml  seg.yaml
run/conf/decoder/: LSTMDecoder.yaml  MLPDecoder.yaml  ResAttnUNet1DDecoder.yaml  ResLSTMDecoder.yaml  ResidualLSTMDecoder.yaml  TransformerCNNDecoder.yaml  TransformerDecoder.yaml  UNet1DDecoder.yaml  unet1d.yaml
run/conf/dir/: kaggle.yaml  local.yaml
run/conf/feature_extractor/: CNNSpectrogram.yaml  LSTMFeatureExtractor.yaml  PANNsFeatureExtractor.yaml  SpecFeatureExtractor.yaml  cnnspectrogram.yaml
run/conf/model/: CenterNet.yaml  DETR2DCNN.yaml  Spec1D.yaml  Spec2DCNN.yaml  SpecCNN.yaml  TransformerAutoModel.yaml  newspec2dcnn.yaml  segtransformer.yaml  unet1d.yaml
run/conf/split/: fold_0.yaml
scripts/: setup_local_conf.sh
src/: conf.py  datamodule.py  modelmodule.py
src/augmentation/: cutmix.py  mixup.py
src/datamodule/: seg.py
src/dataset/: centernet.py  common.py  detr.py  seg.py
src/modelmodule/: seg.py
src/models/: base.py  centernet.py  common.py  detr2D.py  newspec2dcnn.py  spec1D.py  spec2Dcnn.py  speccnn.py  transformerautomodel.py
src/models/decoder/: lstmdecoder.py  mlpdecoder.py  newunet.py  residuallstmdecoder.py  transformercnndecoder.py  transformerdecoder.py  unet1d.py  unet1ddecoder.py
src/models/feature_extractor/: cnn.py  lstm.py  panns.py  spectrogram.py
src/models/seg/: SegTransformer.py  UNet1D.py  model.py
src/utils/: common.py  metrics.py  post_process.py
tools/: upload_dataset.py
