[tool.poetry]
name = "kaggle-child-mind-institute-detect-sleep-states"
version = "0.1.0"
description = ""
authors = ["nutorbit <nutorbitx@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">3.9.7,<3.13"
numpy = ">=1.24.4"
matplotlib = ">=3.7.2"
tqdm = ">=4.65.0"
torch = "2.1.0"
joblib = ">=1.3.1"
pyyaml = ">=6.0.1"
types-PyYAML = ">=6.0.12.11"
hydra-core = ">=1.3.2"
pytorch_pfn_extras = ">=0.7.1"
scipy = ">=1.10.1"
pandas = ">=2.0.3"
pytorch-lightning = ">=2.0.6"
polars = ">=0.18.9"
scikit-learn = ">=1.3.0"
kaggle = ">=1.5.16"
seaborn = ">0.12.2"
transformers = ">4.33.2"
wandb = ">0.15.11"
torchaudio = ">=2.0.2"
librosa = ">=0.10.1"
numba = ">=0.58.0"
torchvision = ">=0.15.2"
segmentation-models-pytorch = ">=0.3.3"
rich = ">=13.6.0"
types-tqdm = ">=4.66.0.2"
optuna = ">=3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
